// ignore: unused_import
import 'package:intl/intl.dart' as intl;
import 'app_localizations.dart';

// ignore_for_file: type=lint

/// The translations for English (`en`).
class AppLocalizationsEn extends AppLocalizations {
  AppLocalizationsEn([String locale = 'en']) : super(locale);

  @override
  String get appTitle => 'Geges Smart Barber';

  @override
  String get welcome => 'Welcome to GEGES';

  @override
  String get login => 'Sign In';

  @override
  String get signUp => 'Sign Up';

  @override
  String get email => 'Email';

  @override
  String get password => 'Password';

  @override
  String get forgotPassword => 'Forgot Password?';

  @override
  String get continueWithGoogle => 'Continue with Google';

  @override
  String get home => 'Home';

  @override
  String get profile => 'Profile';

  @override
  String get settings => 'Settings';

  @override
  String get notifications => 'Notifications';

  @override
  String get searchHint => 'Search Barbershop or Services';

  @override
  String get bookNow => 'Book Now';

  @override
  String get waitingForPayment => 'Waiting for Payment';

  @override
  String get verificationPending => 'Verification Pending';

  @override
  String get bookingSuccess => 'Booking Successful';

  @override
  String get cancel => 'Cancel';

  @override
  String get saveChanges => 'Save Changes';
}
