...
              // - elevatedbutton.icon untuk tombol dengan icon & text
              // - image.asset memuat google logo
              // - onpressed memanggil _signInWithGoogle()
              SizedBox(
                height: 55,
                child: ElevatedButton.icon(
                  key: const Key('register_google_btn'),
                  onPressed: _signInWithGoogle,
                  icon: Image.asset(
                    'assets/images/google.png',
                    height: 24,
                    errorBuilder: (_, __, ___) => const Icon(
                      Icons.android,
...
